src/app/memory-card/flip-card/flip-card.component.less
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  font-family: "Montserrat", sans-serif;
}
.wrapper {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.cross {
  position: absolute;
  outline: 0;
  z-index: 3;
  top: 16px;
  right: 16px;
}

.description__title {
  text-align: center;
  font-size: 48px;
}

.card {
  width: 420px;
  height: 340px;
  margin: 1em;
  perspective: 1500px;
  .content {
    position: relative;
    width: 100%;
    height: 100%;
    transform-style: preserve-3d;
    transition: transform 0.8s cubic-bezier(0.75, 0, 0.85, 1);
  }
}

.more {
  display: none;

  &:checked ~ .content {
    transform: rotateY(180deg);
  }
}

.front,
.back {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  transform-style: preserve-3d;
  border-radius: 6px;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;

  .inner {
    height: 100%;
    display: grid;
    padding: 1.5em;
    transform: translateZ(80px) scale(0.94);
  }
}

.front {
  background-color: #fff;
  background-size: cover;
  background-position: center center;
  &:after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: block;
    border-radius: 6px;
    backface-visibility: hidden;
  }
  .inner {
    width: 130%;
    height: 130%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 64px;
  }

  h2 {
    grid-row: 2;
    margin-bottom: 0.3em;
    text-transform: uppercase;
    letter-spacing: 3px;
    color: #fff;
    font-weight: 500;
    text-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
  }

  .rating {
    grid-row: 3;
    color: rgba(255, 255, 255, 0.8);
    font-size: 14px;
    display: flex;
    flex-flow: row nowrap;
    i {
      margin: 0 1px;
    }
  }
}

.back {
  transform: rotateY(180deg);
  background-color: #fff;
  border: 2px solid rgb(240, 240, 240);
  .inner {
    grid-template-rows: 1fr 2fr 1fr 2fr 14fr 1fr 1fr;
    grid-template-columns: repeat(4, auto);
    grid-column-gap: 0.8em;
    justify-items: center;
  }

  .info {
    position: relative;
    display: flex;
    align-items: center;
    color: #355cc9;
    grid-row: 3;
    &:not(:first-of-type):before {
      content: "";
      position: absolute;
      left: -0.9em;
      height: 18px;
      width: 1px;
      background-color: #ccc;
    }
    span {
      font-size: 2em;
      font-weight: 700;
    }
    i {
      &:before {
        background: linear-gradient(40deg, #355cc9, rgb(67, 138, 243));

        -webkit-text-fill-color: transparent;
        -webkit-background-clip: text;
      }
      font-size: 1.2em;
    }
    .icon {
      margin-left: 0.3em;
      span {
        display: block;
        margin-top: -0.25em;
        font-size: 0.8em;
        font-weight: 600;
        white-space: nowrap;
      }
    }
  }

  .description {
    grid-row: 5;
    grid-column: 1/-1;
    font-size: 0.86em;
    border-radius: 5px;
    font-weight: 600;
    line-height: 1.4em;
    overflow: auto;
    color: #355cc9;
    padding-right: 10px;
  }

  .location,
  .price {
    font-weight: 600;
    color: #355cc9;
    grid-row: 1;
    font-size: 0.86em;
  }

  .location {
    grid-column: 1/3;
    justify-self: left;
  }

  .price {
    grid-column: 3/-1;
    justify-self: right;
  }

  .button {
    grid-column: 1/-1;
    justify-self: center;
  }
}

.button {
  grid-row: -1;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 600;
  cursor: pointer;
  display: block;
  padding: 0 1.5em;
  height: 3em;
  line-height: 2.9em;
  min-width: 3em;
  background-color: transparent;
  border: solid 2px #fff;
  color: #fff;
  border-radius: 4px;
  text-align: center;
  left: 50%;
  backface-visibility: hidden;
  transition: 0.3s ease-in-out;
  text-shadow: 0 0 6px rgba(0, 0, 0, 0.3);

  &:hover {
    background-color: #fff;
    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
    text-shadow: none;
    color: #355cc9;
  }

  &.return {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #355cc9;
    border-color: #355cc9;
    text-shadow: none;
  }
}

::-webkit-scrollbar {
  width: 5px;
}
::-webkit-scrollbar-track {
  background: #f1f1f1;
}
::-webkit-scrollbar-thumb {
  background: lighten(#355cc9, 20%);
}
::-webkit-scrollbar-thumb:hover {
  background: #355cc9;
}

